--- a/style.css
+++ b/style.css
@@ -14,6 +14,9 @@ body {
     background-color: whitesmoke;
     border: 1px black solid;
 }
+button {
+    outline: none;
+}
 .container {
     width: 100%;
     position: relative;
@@ -103,6 +106,7 @@ input:checked + .slider:before {
     border: none;
     font-size: 2vh;
     padding: 10px 0;
+    border-bottom: 1px darkgray solid;
 }
 #navStopwatch {
     width: 28vw;
@@ -164,7 +168,7 @@ input::-webkit-inner-spin-button {
     position: fixed;
     left: 0;
     bottom: 0;
-    height: 8vh;
+    height: 9vh;
     margin: 0 3%;
     width: 94%;
     text-align: center;
@@ -179,10 +183,9 @@ input::-webkit-inner-spin-button {
     border: none;
 }
 
-/* Medium devices (landscape tablets, 768px and up) */
-@media only screen and (min-width: 450px) {
+@media only screen and (min-width: 550px) {
     body {
-        width: 450px;
+        width: 550px;
     }
     #navStopwatch, #navTimer, #navAlarm, #navDuration {
         width: 23%;
