--- a/style.css
+++ b/style.css
@@ -12,7 +12,6 @@ body {
     margin: auto;
     text-align: center;
     background-color: whitesmoke;
-    border: 1px black solid;
 }
 button {
     outline: none;
@@ -105,8 +104,7 @@ input:checked + .slider:before {
     background-color: inherit;
     border: none;
     font-size: 2vh;
-    padding: 10px 0;
-    border-bottom: 1px darkgray solid;
+    padding: 10px 0;    
 }
 #navStopwatch {
     width: 28vw;
@@ -124,20 +122,22 @@ input:checked + .slider:before {
 /* N A V I G A T I O N */
 #addAlarm {
     font-family: 'Courier New', Courier, monospace;
-    position: absolute;
-    background-color: seagreen;
+    position: fixed;
+    background-color: teal;
     color: whitesmoke;
-    width: 50px;
-    height: 50px;
+    width: 55px;
+    height: 55px;
     font-size: 250%;
     font-weight: normal;
     vertical-align: middle;
     border-radius: 100%;
-    right: 4vw;
-    top: 0vh;
+    right: 15px;
+    bottom: 15px;
     box-shadow: none;
 }
-
+#newAlarm {
+    padding: 20px;
+}
 
 
 
@@ -209,6 +209,7 @@ input::-webkit-inner-spin-button {
 @media only screen and (min-width: 601px) {
     body {
         width: 600px;
+        border: 1px black solid;
     }
     #navStopwatch, #navTimer, #navAlarm, #navDuration {
         width: 23%;
