--- a/style/style.css
+++ b/style/style.css
@@ -6,7 +6,7 @@
 body, html {
     height: 100%;
     width: 100%;
-    font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+    font-family: 'PT Sans', sans-serif;
 }
 body {
     margin: auto;
@@ -106,6 +106,11 @@ input:checked + .slider:before {
     font-size: 2vh;
     padding: 10px 0;    
 }
+#navAlarm {
+    color: teal;
+    border-bottom: teal 1px solid;
+    font-weight: bold;
+}
 #navStopwatch {
     width: 28vw;
 }
@@ -185,6 +190,35 @@ input::-webkit-inner-spin-button {
     -webkit-appearance: none;
 }
 
+
+/* S T O P W A T C H */
+
+#stopwatchCounters {
+    padding-top: 37vh;
+    height: 37vh;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+}
+
+#stopwatchCounter {
+    color: rgba(0, 128, 128, 0.5);
+    font-size: 6vh;
+}
+#stopwatchLapCounter {
+    padding: 1vh;
+    font-size: 3vh;
+}
+#lapTimes {
+    margin: 0 auto;
+    padding: 2vh;
+    font-size: 2vh;
+    width: 70vw;
+    border-top: darkgray 1px solid;
+    max-height: 37vh;
+    overflow-y: auto;
+    overflow-x: hidden;
+}
 
 
 .footer {
