--- a/style/night.css
+++ b/style/night.css
@@ -1,25 +1,21 @@
 body, html {
-    height: 100%;
     background-color: black;
     color: whitesmoke;
 }
-.full-height {
-    height: 100%;
-}
 
+
+/* H E A D E R */
 .switch {
+    float: right;
     position: relative;
-    display: inline-block;
-    width: 60px;
-    height: 34px;
-}
-  
+    width: 50px;
+    height: 28px;
+} 
 .switch input { 
     opacity: 0;
     width: 0;
     height: 0;
-}
-  
+} 
 .slider {
     position: absolute;
     cursor: pointer;
@@ -30,39 +26,60 @@ body, html {
     background-color: #ccc;
     -webkit-transition: .4s;
     transition: .4s;
-}
-  
+} 
 .slider:before {
     position: absolute;
     content: "";
-    height: 26px;
-    width: 26px;
+    height: 21px;
+    width: 21px;
     left: 4px;
     bottom: 4px;
     background-color: white;
     -webkit-transition: .4s;
     transition: .4s;
-}
-  
+} 
 input:checked + .slider {
-    background-color: #2196F3;
-}
-  
+    background-color: TEAL;
+} 
 input:focus + .slider {
     box-shadow: 0 0 1px #2196F3;
-}
-  
+}  
 input:checked + .slider:before {
-    -webkit-transform: translateX(26px);
-    -ms-transform: translateX(26px);
-    transform: translateX(26px);
+    -webkit-transform: translateX(21px);
+    -ms-transform: translateX(21px);
+    transform: translateX(21px);
 }
-  
-  /* Rounded sliders */
 .slider.round {
-    border-radius: 34px;
-}
-  
+    border-radius: 28px;
+} 
 .slider.round:before {
     border-radius: 50%;
+}
+
+
+/* N A V I G A T I O N */
+
+
+/* A L A R M */
+
+
+/* D U R A T I O N */
+
+
+/* S T O P W A T C H */
+
+
+/* T I M E R */
+#timerInputs button, span, input {
+    color: teal;
+    background-color: inherit;
+}
+
+#timerInputs button {
+    border: rgba(0, 128, 128, 0.5) 1px solid;
+    border-radius: 10%;
+}
+
+#timerInputs input {
+    border: 1px black solid;
 }
