--- a/style/night.css
+++ b/style/night.css
@@ -70,6 +70,8 @@ input:checked + .slider:before {
 
 
 /* T I M E R */
+
+
 #timerInputs button, span, input {
     color: teal;
     background-color: inherit;
@@ -82,4 +84,8 @@ input:checked + .slider:before {
 
 #timerInputs input {
     border: 1px black solid;
+}
+
+#spinnerContainer {
+    background-color: black;
 }
